--- a/Timer/Timer.html
+++ b/Timer/Timer.html
@@ -25,11 +25,11 @@
         </div>
         
         
-        <!-- <div class="button">
+        <div class="button">
             <button onclick="darktheme()">
                 <img src="dark-mode.png" alt="" id="theme">
             </button>
-        </div> -->
+        </div>
     </div>
 </body>
 <script src="Timer.js"></script>
